move api and adminer to subdomain

--- a/proxy/config2/nginx.conf
+++ b/proxy/config2/nginx.conf
@@ -79,6 +79,37 @@ http {
         }
         # Here common config
     }
+    server {
+        # Listen for ipv6
+        # listen [::]:443 ssl http2 ipv6only=on; 
+        listen [::]:443 ssl http2; 
+        # Listen for ipv4
+        listen 443 ssl http2;
+        # The server_name is used to match the correct server section.
+        # However if no match occurs the first server section is applied.
+        server_name api.adivo.ch;
+        include common.conf;
+       
+        # Pattern to access the api service
+        # Example: http://dbadmin.rhb.innotix.local
+        location /api/ {
+            proxy_pass         http://imonetprod_api;
+            # proxy_redirect     off;
+            # proxy_set_header   Host $host;
+            # proxy_set_header   X-Real-IP $remote_addr;
+            # proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            # proxy_set_header   X-Forwarded-Host $server_name;
+        }
+        location /adminer/ {
+            proxy_pass         http://imonetprod_adminer;
+            # proxy_redirect     off;
+            # proxy_set_header   Host $host;
+            # proxy_set_header   X-Real-IP $remote_addr;
+            # proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            # proxy_set_header   X-Forwarded-Host $server_name;
+        }
+        # Here common config
+    }
    upstream imonetprod_pwa {
         server imonetprod_pwa_1:80 weight=3;
         #server imonetprod_web_2:80;
