nginx try to make subdomain valid

--- a/proxy/config2/nginx.conf
+++ b/proxy/config2/nginx.conf
@@ -17,8 +17,9 @@ http {
    
     # Redirect any connection on http to https
     server {
-        listen 80 default_server;
-        listen [::]:80 default_server;
+        listen 80;
+        #listen 80 default_server;
+        listen [::]:80;
         server_name _;
         return 301 https://$host$request_uri;
     }  
@@ -61,22 +62,22 @@ http {
        
         # Pattern to access the api service
         # Example: http://dbadmin.rhb.innotix.local
-        location /api/ {
-            proxy_pass         http://imonetprod_api;
+        #location /api/ {
+         #   proxy_pass         http://imonetprod_api;
             # proxy_redirect     off;
             # proxy_set_header   Host $host;
             # proxy_set_header   X-Real-IP $remote_addr;
             # proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
             # proxy_set_header   X-Forwarded-Host $server_name;
-        }
-        location /adminer/ {
-            proxy_pass         http://imonetprod_adminer;
+        #}
+        #location /adminer/ {
+         #   proxy_pass         http://imonetprod_adminer;
             # proxy_redirect     off;
             # proxy_set_header   Host $host;
             # proxy_set_header   X-Real-IP $remote_addr;
             # proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
             # proxy_set_header   X-Forwarded-Host $server_name;
-        }
+        #}
         # Here common config
     }
     server {
@@ -157,31 +158,6 @@ http {
         # Here common config
     }
    # --------------------------------------------------------------------------------------
-   
-    
-    server { 
-        # Listen for ipv6
-        # listen [::]:443 ssl http2 ipv6only=on; 
-        listen [::]:443 ssl http2; 
-        # Listen for ipv4
-        listen 443 ssl http2;
-        include common.conf; 
-        server_name api.adivo.ch;
-        
-        # Pattern to access the api service
-        # Example: http://dbadmin.rhb.innotix.local
-        location / {
-            proxy_pass         http://imonetprod_api;
-            # proxy_redirect     off;
-            # proxy_set_header   Host $host;
-            # proxy_set_header   X-Real-IP $remote_addr;
-            # proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-            # proxy_set_header   X-Forwarded-Host $server_name;
-        }
-       
-    }
-    # --------------------------------------------------------------------------------------
-    
     
     server { 
         # Listen for ipv6
