--- a/proxy/config/nginx.conf
+++ b/proxy/config/nginx.conf
@@ -17,24 +17,28 @@ http {
    
     # Redirect any connection on http to https
     server {
-        listen 80;
-        #listen 80 default_server;
+        listen 80; #also seen: listen 80 default_server;
         listen [::]:80;
         server_name _;
         return 301 https://$host$request_uri;
     }  
 
-    
-
-    # Means that proxy_pass hosts, here imonetprod_web is resolved to addresses listed as server, that is imonetprod_web_1:80
+    # -------------------------------------------------------------------------------------------------------
+    # Upstream definitions for imonet
+    #
+    # Upstreams hosts pointers to the real hosts (in the context of docker-compose the service name).
+    # We resolve the upstream name to one of the listed hosts, that is for example to imonetprod_web_1:80
     # weight=3 means that this server is preferred
+    # -------------------------------------------------------------------------------------------------------
+   
+    # web
     upstream imonetprod_web {
         server imonetprod_web_1:80 weight=3;
         #server imonetprod_web_2:80;
         #server imonetprod_web_3:80;    
     }
     
-    # REST API configuration
+    # REST API
     upstream imonetprod_api {
         server imonetprod_api_1:3000 weight=3;
     }
@@ -42,6 +46,10 @@ http {
     upstream imonetprod_adminer {
         server imonetprod_adminer_1:8080 weight=3;
     }
+
+    # -------------------------------------------------------------------------------------------------------
+    # Web: adivo.ch reverse proxy configuration
+    # -------------------------------------------------------------------------------------------------------
     server {
         # Listen for ipv6
         # listen [::]:443 ssl http2 ipv6only=on; 
@@ -55,24 +63,21 @@ http {
         location / {
             # When using the internal url of the web service:
             # proxy_pass http://imonetprod_web_1:80; 
-
             # Reference the upstream server configured above
             proxy_pass http://imonetprod_web; 
         }
     }
-    # api.adivo.ch --------------------------------------
+    # -------------------------------------------------------------------------------------------------------
+    # api.adivo.ch reverse proxy configuration
+    # Be sure to configure the DNS with a CNAME entry for this subdomain
+    # -------------------------------------------------------------------------------------------------------
     server {
        
         # listen [::]:443 ssl http2 ipv6only=on; 
         listen [::]:443 ssl http2;   # Listen for ipv6
         listen 443 ssl http2; # Listen for ipv4
-        # The server_name is used to match the correct server section.
-        # However if no match occurs the first server section is applied.
         server_name api.adivo.ch;
         include common.conf;
-       
-        # Pattern to access the api service
-        # Example: http://dbadmin.rhb.innotix.local
         location / {
             proxy_pass         http://imonetprod_api;
             # proxy_redirect     off;
@@ -82,30 +87,38 @@ http {
             # proxy_set_header   X-Forwarded-Host $server_name;
         }
     }
-     
-     # db.adivo.ch --------------------------------------
-     server {
-       
-        # listen [::]:443 ssl http2 ipv6only=on; 
+      
+    # -------------------------------------------------------------------------------------------------------
+    # db.adivo.ch reverse proxy configuration, that is the database admin tool
+    # Be sure to configure the DNS with a CNAME entry for this subdomain
+    # -------------------------------------------------------------------------------------------------------
+    server {
         listen [::]:443 ssl http2;   # Listen for ipv6
         listen 443 ssl http2; # Listen for ipv4
-        
         server_name db.adivo.ch;
-        
         include common.conf;
-       
         location /{
             proxy_pass         http://imonetprod_adminer;
         }
     }
-   upstream imonetprod_pwa {
+   
+   
+    # -------------------------------------------------------------------------------------------------------
+    # Upstream definitions for class-room
+    #
+    # Upstreams hosts pointers to the real hosts (in the context of docker-compose the service name).
+    # We resolve the upstream name to one of the listed hosts, that is for example to imonetprod_web_1:80
+    # weight=3 means that this server is preferred
+    # -------------------------------------------------------------------------------------------------------
+    upstream imonetprod_pwa {
         server imonetprod_pwa_1:80 weight=3;
         #server imonetprod_web_2:80;
         #server imonetprod_web_3:80;    
     }
-    
    
-   
+    # -------------------------------------------------------------------------------------------------------
+    # Web: class-room.ch reverse proxy configuration
+    # -------------------------------------------------------------------------------------------------------
     server {
         # Listen for ipv6
         # listen [::]:443 ssl http2 ipv6only=on; 
@@ -119,14 +132,22 @@ http {
         location / {
             # When using the internal url of the web service:
             # proxy_pass http://imonetprod_web_1:80; 
-
             # Reference the upstream server configured above
-            proxy_pass http://imonetprod_pwa; 
+            proxy_pass http://imonetprod_web; 
         }
+    }
+    # -------------------------------------------------------------------------------------------------------
+    # api.adivo.ch reverse proxy configuration
+    # Be sure to configure the DNS with a CNAME entry for this subdomain
+    # -------------------------------------------------------------------------------------------------------
+    server {
        
-        # Pattern to access the api service
-        # Example: http://dbadmin.rhb.innotix.local
-        location /api/ {
+        # listen [::]:443 ssl http2 ipv6only=on; 
+        listen [::]:443 ssl http2;   # Listen for ipv6
+        listen 443 ssl http2; # Listen for ipv4
+        server_name api.class-room.ch;
+        include common.conf;
+        location / {
             proxy_pass         http://imonetprod_api;
             # proxy_redirect     off;
             # proxy_set_header   Host $host;
@@ -134,36 +155,20 @@ http {
             # proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
             # proxy_set_header   X-Forwarded-Host $server_name;
         }
-        location /adminer/ {
-            proxy_pass         http://imonetprod_adminer;
-            # proxy_redirect     off;
-            # proxy_set_header   Host $host;
-            # proxy_set_header   X-Real-IP $remote_addr;
-            # proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-            # proxy_set_header   X-Forwarded-Host $server_name;
-        }
-        # Here common config
     }
-   # --------------------------------------------------------------------------------------
-    
-    server { 
-        # Listen for ipv6
-        #listen [::]:443 ssl http2 ipv6only=on; 
-        listen [::]:443 ssl http2; 
-        # Listen for ipv4
-        listen 443 ssl http2;
-       
-        server_name adminer.adivo.ch;
+      
+    # -------------------------------------------------------------------------------------------------------
+    # db.adivo.ch reverse proxy configuration, that is the database admin tool
+    # Be sure to configure the DNS with a CNAME entry for this subdomain
+    # -------------------------------------------------------------------------------------------------------
+    server {
+        listen [::]:443 ssl http2;   # Listen for ipv6
+        listen 443 ssl http2; # Listen for ipv4
+        server_name db.class-room.ch;
         include common.conf;
-        # Pattern to access the api service
-        # Example: http://dbadmin.rhb.innotix.local
-        location / {
+        location /{
             proxy_pass         http://imonetprod_adminer;
-            # proxy_redirect     off;
-            # proxy_set_header   Host $host;
-            # proxy_set_header   X-Real-IP $remote_addr;
-            # proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-            # proxy_set_header   X-Forwarded-Host $server_name;
         }
     }
+   
 }
