--- a/scripts/docker-compose-prod.yml
+++ b/scripts/docker-compose-prod.yml
@@ -12,11 +12,9 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ../proxy/config2:/etc/nginx
-      #- ../proxy/config2/certbot/conf:/etc/letsencrypt
+      - ../proxy/config:/etc/nginx
+      - ../proxy/config/logs:/var/log/nginx
       - /etc/letsencrypt:/etc/letsencrypt
-      # - ../proxy/config2/certbot/www:/var/www/certbot
-      - ../proxy/config2/logs:/var/log/nginx
     networks:
       proxy:
 
