caching of index.html and strategies for other routes

--- a/scripts/.env-dev
+++ b/scripts/.env-dev
@@ -33,3 +33,8 @@ DB_PORT_SERVICE=3306
 DB_USER=imonet
 DB_PASSWORD=imonet
 DB_DATABASE=imonet
+
+# -------------------------------------------------------
+# THEMING
+# -------------------------------------------------------
+VUE_APP_THEME_COLOR=#7a1da0 
