--- a/scripts/docker-compose-with-port-mappings.yml
+++ b/scripts/docker-compose-with-port-mappings.yml
@@ -11,6 +11,7 @@ services:
     command: "yarn serve --port 8080"
     environment:
       VUE_APP_API_URL: ${VUE_APP_API_URL}
+      VUE_APP_THEME_COLOR: ${VUE_APP_THEME_COLOR}
     env_file:
       - ./.env-${ENV}
     ports:
@@ -22,7 +23,7 @@ services:
     restart: "no"
     volumes:
       - ../api:/usr/src/app # map code
-      - ../api/media:/usr/src/app/media 
+      - ../api/media:/usr/src/app/media
 
     working_dir: /usr/src/app
     command: yarn start
