--- a/ui-vuetify/package.json
+++ b/ui-vuetify/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ui-vuetify",
-  "version": "0.1.0",
+  "name": "imonet",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
