--- a/api/package.json
+++ b/api/package.json
@@ -27,6 +27,7 @@
     "dotenv": "^8.2.0",
     "esm": "^3.2.25",
     "express": "^4.17.1",
+    "express-fileupload": "^1.1.7-alpha.3",
     "graylog2": "latest",
     "helmet": "^3.21.1",
     "jose": "^1.18.1",
@@ -39,6 +40,8 @@
     "path": "^0.12.7",
     "properties-reader": "^0.3.1",
     "sendmail": "^1.6.1",
+    "sequelize": "^5.21.6",
+    "shortid": "^2.2.15",
     "socket.io": "^2.3.0",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^4.3.0",
