--- a/api/src/config/configsDefaults.json
+++ b/api/src/config/configsDefaults.json
@@ -24,7 +24,8 @@
     "userDomain": "user",
     "multiTenantDomains": [
       "user",
-      "task"
+      "mediaFile",
+      "realEstate"
     ],
     "commonDomains": [
       "product"
