--- a/scripts/.env-dev
+++ b/scripts/.env-dev
@@ -12,6 +12,9 @@ WEB_VERSION=latest
 # AUTH
 # -------------------------------------------------------
 JWT_SECRET=12989893asiujhkjq34792392323237
+PUBLIC_VAPID_KEY=BFeD5yPAsk5ife9147C9vI6ENZAZeFJtXVg6UUq7lXJSlJvT2-rPcWvlUlJK45ctcNW80Y23F0_0a6g6RPubTKE
+PRIVATE_VAPID_KEY=RbG0J_M-GbwfnuYukkyZYmGx-QmGp8j7sR_jaSRlgRI
+VAPID_EMAIL=https://adivo.ch
 
 # -------------------------------------------------------
 # API
