--- a/ui-vuetify/nginx/nginx.conf
+++ b/ui-vuetify/nginx/nginx.conf
@@ -9,7 +9,8 @@ http {
     index   index.html index.htm;
     error_log  /var/log/nginx/vue-app-error.log;
     access_log /var/log/nginx/vue-app-access.log;
-   
+    charset utf-8;
+    
     gzip on;
     gzip_types text/css application/javascript application/json image/svg+xml;
     gzip_comp_level 9;
