--- a/api/package.json
+++ b/api/package.json
@@ -43,6 +43,7 @@
     "sequelize": "^5.21.6",
     "shortid": "^2.2.15",
     "socket.io": "^2.3.0",
+    "web-push": "^3.4.3",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^4.3.0",
     "winston-gelf": "^1.7.0",
