add cors headers for api

--- a/proxy/config/nginx.conf
+++ b/proxy/config/nginx.conf
@@ -78,12 +78,24 @@ http {
         listen 443 ssl http2; # Listen for ipv4
         server_name api.adivo.ch;
         include common.conf;
+
+        add_header 'Access-Control-Allow-Origin' '*';
+        add_header 'Access-Control-Allow-Credentials' 'true';
+        add_header 'Access-Control-Allow-Headers' 'Authorization,Accept,Origin,DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Content-Range,Range';
+        add_header 'Access-Control-Allow-Methods' 'GET,POST,OPTIONS,PUT,DELETE,PATCH';
+
         location / {
+             if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Type' 'text/plain charset=UTF-8';
+                add_header 'Content-Length' 0;
+                return 204;
+            }
             proxy_pass         http://imonetprod_api;
-            # proxy_redirect     off;
-            # proxy_set_header   Host $host;
-            # proxy_set_header   X-Real-IP $remote_addr;
-            # proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_redirect     off;
+            proxy_set_header   Host $host;
+            proxy_set_header   X-Real-IP $remote_addr;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
             # proxy_set_header   X-Forwarded-Host $server_name;
         }
     }
