--- a/proxy/config/nginx.conf
+++ b/proxy/config/nginx.conf
@@ -81,7 +81,8 @@ http {
 
         # Cors headers for option requests, see: https://stackoverflow.com/questions/45986631/how-to-enable-cors-in-nginx-proxy-server
         # do not add here as api cors sets this header already: 
-        set_header 'Access-Control-Allow-Origin' 'https://adivo.ch';
+        proxy_hide_header 'access-control-allow-origin';
+        add_header 'access-control-allow-origin' '*';       
         add_header 'Access-Control-Allow-Credentials' 'true';
         add_header 'Access-Control-Allow-Headers' 'Authorization,Accept,Origin,DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Content-Range,Range';
         add_header 'Access-Control-Allow-Methods' 'GET,POST,OPTIONS,PUT,DELETE,PATCH';
