--- a/ui-vuetify/package.json
+++ b/ui-vuetify/package.json
@@ -14,7 +14,7 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "lodash": "^4.17.15",
-    "register-service-worker": "^1.7.1",
+    "serviceworker-webpack-plugin": "^1.0.1",
     "vue": "^2.6.11",
     "vue-pdf": "^4.0.8",
     "vue-router": "^3.1.5",
@@ -26,7 +26,6 @@
     "@vue/cli-plugin-babel": "~4.2.0",
     "@vue/cli-plugin-e2e-cypress": "~4.2.0",
     "@vue/cli-plugin-eslint": "~4.2.0",
-    "@vue/cli-plugin-pwa": "~4.3.0",
     "@vue/cli-plugin-router": "~4.2.0",
     "@vue/cli-plugin-unit-jest": "~4.2.0",
     "@vue/cli-service": "~4.2.0",
