--- a/proxy/config/nginx.conf
+++ b/proxy/config/nginx.conf
@@ -88,12 +88,12 @@ http {
         add_header 'Access-Control-Allow-Methods' 'GET,POST,OPTIONS,PUT,DELETE,PATCH';
 
         location / {
-             if ($request_method = 'OPTIONS') {
-                add_header 'Access-Control-Max-Age' 1728000;
-                add_header 'Content-Type' 'text/plain charset=UTF-8';
-                add_header 'Content-Length' 0;
-                return 204;
-            }
+             #if ($request_method = 'OPTIONS') {
+             #   add_header 'Access-Control-Max-Age' 1728000;
+             #   add_header 'Content-Type' 'text/plain charset=UTF-8';
+             #   add_header 'Content-Length' 0;
+             #   return 204;
+             #}
             proxy_pass         http://imonetprod_api;
             proxy_redirect     off;
             proxy_set_header   Host $host;
