--- a/ui-vuetify/package.json
+++ b/ui-vuetify/package.json
@@ -15,6 +15,7 @@
     "core-js": "^3.6.4",
     "lodash": "^4.17.15",
     "register-service-worker": "^1.7.1",
+    "shortid": "^2.2.15",
     "vue": "^2.6.11",
     "vue-pdf": "^4.0.8",
     "vue-router": "^3.1.5",
