uf, a lot of stuff to commit

--- a/api/package.json
+++ b/api/package.json
@@ -12,11 +12,11 @@
     "pretty": "prettier 'src/**/*.js' --write ",
     "lint": "eslint --fix src/**/*.js",
     "prettier": "prettier --write src/**/*.*",
-    "test": "NODE_ENV=test jest --watchAll --coverage ",
+    "test": "NODE_ENV=test jest --watchAll --coverage --verbose",
     "test-single-depr": "NODE_ENV=test node_modules/.bin/jest src/controllers/realEstate/*.test.js --watch --coverage",
-    "test-single": "NODE_ENV=test jest -t 'src/controllers/realEstate/realEstateController.test.js' --watch",
+    "test-single": "NODE_ENV=test jest -t 'src/controllers/realEstate/realEstateController.test.js' --watch ",
     "test-single:w": "set NODE_ENV=test & node_modules/.bin/jest src/controllers/utils/controllerUtil.test.js --watch --coverage",
-    "test-debug-single": "NODE_ENV=test node --inspect-brk node_modules/.bin/jest src/controllers/**/*.test.js",
+    "test-single-debug-not-working": "NODE_ENV=test node --inspect node_modules/.bin/jest src/controllers/**/*.test.js --watch",
     "test-debug": "NODE_ENV=test node --inspect-brk node_modules/.bin/jest --watch --coverage"
   },
   "license": "MIT",
@@ -32,6 +32,7 @@
     "graylog2": "latest",
     "helmet": "^3.21.1",
     "jose": "^1.18.1",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "mariadb": "^2.1.5",
     "mysql2": "^2.1.0",
@@ -42,6 +43,7 @@
     "properties-reader": "^0.3.1",
     "sendmail": "^1.6.1",
     "sequelize": "^5.21.6",
+    "short-unique-id": "^2.0.7",
     "shortid": "^2.2.15",
     "socket.io": "^2.3.0",
     "web-push": "^3.4.3",
