--- a/api/package.json
+++ b/api/package.json
@@ -35,6 +35,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "mariadb": "^2.1.5",
+    "mongodb": "^3.5.8",
     "mongoose": "^5.9.13",
     "mysql2": "^2.1.0",
     "mysql2-promise": "^0.1.4",
