--- a/scripts/docker-compose-with-port-mappings.yml
+++ b/scripts/docker-compose-with-port-mappings.yml
@@ -2,6 +2,19 @@
 version: "3.1"
 
 services:
+  web-built:
+    image: nginx:stable-alpine
+    ports:
+      - ${WEBAPP_PORT}:80
+    volumes:
+      - ../ui-vuetify/dist:/usr/share/nginx/html
+      - ../ui-vuetify/nginx/nginx.conf:/etc/nginx/nginx.conf
+    command: [nginx, "-g", "daemon off;"]
+    environment:
+      VUE_APP_API_URL: ${VUE_APP_API_URL}
+      VUE_APP_THEME_COLOR: ${VUE_APP_THEME_COLOR}
+    networks:
+      proxy:
   web:
     image: node:13.6.0-alpine3.10
     restart: "no"
@@ -66,6 +79,39 @@ services:
       - ${DB_ADMIN_PORT}:8080
     networks:
       - proxy
+
+  prisma:
+    image: prismagraphql/prisma:1.34
+    restart: always
+    ports:
+      - "4466:4466"
+    environment:
+      PRISMA_CONFIG: |
+        port: 4466
+        databases:
+          default:
+            connector: mongo
+            uri: mongodb://prisma:prisma@mongo
+  mongo:
+    image: mongo
+    restart: always
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: imonet
+      MONGO_INITDB_ROOT_PASSWORD: imonet
+      MONGO_INITDB_DATABASE: imonet
+    ports:
+      - "27017:27017"
+    volumes:
+      - ../db/mongo/data:/var/lib/mongo
+      - ../db/mongo/db-setup:/docker-entrypoint-initdb.d
+  mongo-express:
+    image: mongo-express
+    restart: always
+    ports:
+      - 3001:8081
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: imonet
+      ME_CONFIG_MONGODB_ADMINPASSWORD: imonet
 
   # mongo:
   #   image: mongo
