--- a/ui-vuetify/package.json
+++ b/ui-vuetify/package.json
@@ -22,7 +22,11 @@
     "vue-router": "^3.1.5",
     "vuejs-logger": "^1.5.4",
     "vuetify": "^2.2.21",
-    "vuex": "^3.1.3"
+    "vuex": "^3.1.3",
+    "workbox-expiration": "^5.1.3",
+    "workbox-precaching": "^5.1.3",
+    "workbox-routing": "^5.1.3",
+    "workbox-strategies": "^5.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
