docker restart policy adapted

--- a/scripts/docker-compose-with-port-mappings.yml
+++ b/scripts/docker-compose-with-port-mappings.yml
@@ -86,9 +86,10 @@ services:
 
   mongo:
     image: mongo
+
     deploy:
       restart_policy:
-        condition: none
+        condition: on-failure
         delay: 5s
         max_attempts: 3
         window: 120s
